--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <div class="logo">
+                <img src="img/view-dashboard.svg" alt="Dashboard">
+                <p>Dashboard</p>
+            </div>
+            <div class="main">
+                <div class="item">
+                    <img src="img/home.svg" alt="Home">
+                    <p>Home</p>
+                </div>
+                <div class="item">
+                    <img src="img/card-account-details-outline.svg" alt="Profile">
+                    <p>Profile</p>
+                </div>
+                <div class="item">
+                    <img src="img/message.svg" alt="Messages">
+                    <p>Messages</p>
+                </div>
+                <div class="item">
+                    <img src="img/clock-time-three.svg" alt="History">
+                    <p>History</p>
+                </div>
+                <div class="item">
+                    <img src="img/note-multiple.svg" alt="Tasks">
+                    <p>Tasks</p>
+                </div>
+                <div class="item">
+                    <img src="img/account-group.svg" alt="Communities">
+                    <p>Communities</p>
+                </div>
+            </div>
+            <div class="secondary">
+                <div class="item">
+                    <img src="img/cog.svg" alt="Settings">
+                    <p>Settings</p>
+                </div>
+                <div class="item">
+                    <img src="img/help-box.svg" alt="Support">
+                    <p>Support</p>
+                </div>
+                <div class="item">
+                    <img src="img/shield-check.svg" alt="Privacy">
+                    <p>Privacy</p>
+                </div>
+            </div>
+        </div>
+        <div class="header">
+
+        </div>
+    </div>
 </body>
 </html>
