Input all header html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,31 @@
             </div>
         </div>
         <div class="header">
-
+            <div class="top">
+                <div class="search">
+                    <img src="img/magnify.svg" alt="Search">
+                    <input type="text">
+                </div>
+                <div class="profile">
+                    <img src="img/bell-ring-outline.svg" alt="Notifications">
+                    <img src="img/profile.png" alt="Profile Pic">
+                    <p>Connay West</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="greeting">
+                    <img src="img/profile.png" alt="Profile Pic">
+                    <div class="message">
+                        <p>Hi there,</p>
+                        <p class="name">Connay West (@connay.west)</p>
+                    </div>
+                </div>
+                <div class="actions">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
