--- a/index.html
+++ b/index.html
@@ -71,13 +71,141 @@
                     <img src="img/profile.png" alt="Profile Pic">
                     <div class="message">
                         <p>Hi there,</p>
-                        <p class="name">Connay West (@connay.west)</p>
+                        <h1 class="name">Connay West (@connay.west)</h1>
                     </div>
                 </div>
                 <div class="actions">
                     <button>New</button>
                     <button>Upload</button>
                     <button>Share</button>
+                </div>
+            </div>
+        </div>
+        <div class="dashboard">
+            <div class="projects">
+                <h2>Your Projects</h2>
+                <div class="purple card">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Maiores debitis, perferendis iusto consequuntur quibusdam 
+                        asperiores sequi nobis aut inventore eveniet tempore 
+                        consequatur voluptatibus qui quaerat molestiae odit 
+                        temporibus? Obcaecati, veniam.</p>
+                    <div class="icons">
+                        <img src="img/heart.svg" alt="Like">
+                        <img src="img/bookmark.svg" alt="Save">
+                        <img src="img/source-fork.svg" alt="Fork">
+                    </div>
+                </div>
+                <div class="purple card">
+                    <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Maiores debitis, perferendis iusto consequuntur quibusdam 
+                        asperiores sequi nobis aut inventore eveniet tempore 
+                        consequatur voluptatibus qui quaerat molestiae odit 
+                        temporibus? Obcaecati, veniam.</p>
+                    <div class="icons">
+                        <img src="img/heart.svg" alt="Like">
+                        <img src="img/bookmark.svg" alt="Save">
+                        <img src="img/source-fork.svg" alt="Fork">
+                    </div>
+                </div>
+                <div class="purple card">
+                    <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Maiores debitis, perferendis iusto consequuntur quibusdam 
+                        asperiores sequi nobis aut inventore eveniet tempore 
+                        consequatur voluptatibus qui quaerat molestiae odit 
+                        temporibus? Obcaecati, veniam.</p>
+                    <div class="icons">
+                        <img src="img/heart.svg" alt="Like">
+                        <img src="img/bookmark.svg" alt="Save">
+                        <img src="img/source-fork.svg" alt="Fork">
+                    </div>
+                </div>
+                <div class="purple card">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Maiores debitis, perferendis iusto consequuntur quibusdam 
+                        asperiores sequi nobis aut inventore eveniet tempore 
+                        consequatur voluptatibus qui quaerat molestiae odit 
+                        temporibus? Obcaecati, veniam.</p>
+                    <div class="icons">
+                        <img src="img/heart.svg" alt="Like">
+                        <img src="img/bookmark.svg" alt="Save">
+                        <img src="img/source-fork.svg" alt="Fork">
+                    </div>
+                </div>
+                <div class="purple card">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Maiores debitis, perferendis iusto consequuntur quibusdam 
+                        asperiores sequi nobis aut inventore eveniet tempore 
+                        consequatur voluptatibus qui quaerat molestiae odit 
+                        temporibus? Obcaecati, veniam.</p>
+                    <div class="icons">
+                        <img src="img/heart.svg" alt="Like">
+                        <img src="img/bookmark.svg" alt="Save">
+                        <img src="img/source-fork.svg" alt="Fork">
+                    </div>
+                </div>
+                <div class="purple card">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Maiores debitis, perferendis iusto consequuntur quibusdam 
+                        asperiores sequi nobis aut inventore eveniet tempore 
+                        consequatur voluptatibus qui quaerat molestiae odit 
+                        temporibus? Obcaecati, veniam.</p>
+                    <div class="icons">
+                        <img src="img/heart.svg" alt="Like">
+                        <img src="img/bookmark.svg" alt="Save">
+                        <img src="img/source-fork.svg" alt="Fork">
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <h2>Announcements</h2>
+                <div class="card">
+                    <div class="message">
+                        <h3>Site Maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Nemo, ab voluptatem.</p>
+                    </div>
+                    <div class="message">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Nemo, ab voluptatem.</p>
+                    </div>
+                    <div class="message">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Nemo, ab voluptatem.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending">
+                <h2>Trending</h2>
+                <div class="card">
+                    <div class="user">
+                        <img src="img/profile.png" alt="Profile Pic" class="profile">
+                        <h4 class="username">@connay.west</h4>
+                        <p class="title">World Peace Builder</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/profile.png" alt="Profile Pic" class="profile">
+                        <h4 class="username">@connay.west</h4>
+                        <p class="title">World Peace Builder</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/profile.png" alt="Profile Pic" class="profile">
+                        <h4 class="username">@connay.west</h4>
+                        <p class="title">World Peace Builder</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/profile.png" alt="Profile Pic" class="profile">
+                        <h4 class="username">@connay.west</h4>
+                        <p class="title">World Peace Builder</p>
+                    </div>
                 </div>
             </div>
         </div>
