--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
         <div class="sidebar">
             <div class="logo">
                 <img src="img/view-dashboard.svg" alt="Dashboard">
-                <p>Dashboard</p>
+                <h1>Dashboard</h1>
             </div>
             <div class="main">
                 <div class="item">
                     <img src="img/home.svg" alt="Home">
-                    <p>Home</p>
+                    <h2>Home</h2>
                 </div>
                 <div class="item">
                     <img src="img/card-account-details-outline.svg" alt="Profile">
-                    <p>Profile</p>
+                    <h2>Profile</h2>
                 </div>
                 <div class="item">
                     <img src="img/message.svg" alt="Messages">
-                    <p>Messages</p>
+                    <h2>Messages</h2>
                 </div>
                 <div class="item">
                     <img src="img/clock-time-three.svg" alt="History">
-                    <p>History</p>
+                    <h2>History</h2>
                 </div>
                 <div class="item">
                     <img src="img/note-multiple.svg" alt="Tasks">
-                    <p>Tasks</p>
+                    <h2>Tasks</h2>
                 </div>
                 <div class="item">
                     <img src="img/account-group.svg" alt="Communities">
-                    <p>Communities</p>
+                    <h2>Communities</h2>
                 </div>
             </div>
             <div class="secondary">
