--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <div class="secondary">
                 <div class="item">
                     <img src="img/cog.svg" alt="Settings">
-                    <p>Settings</p>
+                    <h2>Settings</h2>
                 </div>
                 <div class="item">
                     <img src="img/help-box.svg" alt="Support">
-                    <p>Support</p>
+                    <h2>Support</h2>
                 </div>
                 <div class="item">
                     <img src="img/shield-check.svg" alt="Privacy">
-                    <p>Privacy</p>
+                    <h2>Privacy</h2>
                 </div>
             </div>
         </div>
