Line up search and profile, style search input

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <div class="header">
             <div class="top">
                 <div class="search">
-                    <img src="img/magnify.svg" alt="Search">
+                    <img src="img/magnify.svg" alt="Search" class="icons">
                     <input type="text">
                 </div>
                 <div class="profile">
-                    <img src="img/bell-ring-outline.svg" alt="Notifications">
-                    <img src="img/profile.png" alt="Profile Pic">
+                    <img src="img/bell-ring-outline.svg" alt="Notifications" class="icons">
+                    <img src="img/profile.png" alt="Profile Pic" class="profilepic">
                     <p>Connay West</p>
                 </div>
             </div>
