--- a/index.html
+++ b/index.html
@@ -84,88 +84,78 @@
         <div class="dashboard">
             <div class="projects">
                 <h2>Your Projects</h2>
-                <div class="purple card">
-                    <h3>Super Cool Project</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Maiores debitis, perferendis iusto consequuntur quibusdam 
-                        asperiores sequi nobis aut inventore eveniet tempore 
-                        consequatur voluptatibus qui quaerat molestiae odit 
-                        temporibus? Obcaecati, veniam.</p>
-                    <div class="icons">
-                        <img src="img/heart.svg" alt="Like">
-                        <img src="img/bookmark.svg" alt="Save">
-                        <img src="img/source-fork.svg" alt="Fork">
+                <div class="project-cards">
+                    <div class="purple card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Perferendis, quas suscipit.
+                        </p>
+                        <div class="icons">
+                            <img src="img/heart-outline.svg" alt="Like">
+                            <img src="img/bookmark-outline.svg" alt="Save">
+                            <img src="img/source-fork.svg" alt="Fork">
+                        </div>
                     </div>
-                </div>
-                <div class="purple card">
-                    <h3>Less Cool Project</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Maiores debitis, perferendis iusto consequuntur quibusdam 
-                        asperiores sequi nobis aut inventore eveniet tempore 
-                        consequatur voluptatibus qui quaerat molestiae odit 
-                        temporibus? Obcaecati, veniam.</p>
-                    <div class="icons">
-                        <img src="img/heart.svg" alt="Like">
-                        <img src="img/bookmark.svg" alt="Save">
-                        <img src="img/source-fork.svg" alt="Fork">
+                    <div class="purple card">
+                        <h3>Less Cool Project</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Perferendis, quas suscipit.
+                        </p>
+                        <div class="icons">
+                            <img src="img/heart-outline.svg" alt="Like">
+                            <img src="img/bookmark-outline.svg" alt="Save">
+                            <img src="img/source-fork.svg" alt="Fork">
+                        </div>
                     </div>
-                </div>
-                <div class="purple card">
-                    <h3>Impossible App</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Maiores debitis, perferendis iusto consequuntur quibusdam 
-                        asperiores sequi nobis aut inventore eveniet tempore 
-                        consequatur voluptatibus qui quaerat molestiae odit 
-                        temporibus? Obcaecati, veniam.</p>
-                    <div class="icons">
-                        <img src="img/heart.svg" alt="Like">
-                        <img src="img/bookmark.svg" alt="Save">
-                        <img src="img/source-fork.svg" alt="Fork">
+                    <div class="purple card">
+                        <h3>Impossible App</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Perferendis, quas suscipit.
+                        </p>
+                        <div class="icons">
+                            <img src="img/heart-outline.svg" alt="Like">
+                            <img src="img/bookmark-outline.svg" alt="Save">
+                            <img src="img/source-fork.svg" alt="Fork">
+                        </div>
                     </div>
-                </div>
-                <div class="purple card">
-                    <h3>Easy Peasy App</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Maiores debitis, perferendis iusto consequuntur quibusdam 
-                        asperiores sequi nobis aut inventore eveniet tempore 
-                        consequatur voluptatibus qui quaerat molestiae odit 
-                        temporibus? Obcaecati, veniam.</p>
-                    <div class="icons">
-                        <img src="img/heart.svg" alt="Like">
-                        <img src="img/bookmark.svg" alt="Save">
-                        <img src="img/source-fork.svg" alt="Fork">
+                    <div class="purple card">
+                        <h3>Easy Peasy App</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Perferendis, quas suscipit.
+                        </p>
+                        <div class="icons">
+                            <img src="img/heart-outline.svg" alt="Like">
+                            <img src="img/bookmark-outline.svg" alt="Save">
+                            <img src="img/source-fork.svg" alt="Fork">
+                        </div>
                     </div>
-                </div>
-                <div class="purple card">
-                    <h3>Ad Blocker</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Maiores debitis, perferendis iusto consequuntur quibusdam 
-                        asperiores sequi nobis aut inventore eveniet tempore 
-                        consequatur voluptatibus qui quaerat molestiae odit 
-                        temporibus? Obcaecati, veniam.</p>
-                    <div class="icons">
-                        <img src="img/heart.svg" alt="Like">
-                        <img src="img/bookmark.svg" alt="Save">
-                        <img src="img/source-fork.svg" alt="Fork">
+                    <div class="purple card">
+                        <h3>Ad Blocker</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Perferendis, quas suscipit.
+                        </p>
+                        <div class="icons">
+                            <img src="img/heart-outline.svg" alt="Like">
+                            <img src="img/bookmark-outline.svg" alt="Save">
+                            <img src="img/source-fork.svg" alt="Fork">
+                        </div>
                     </div>
-                </div>
-                <div class="purple card">
-                    <h3>Money Maker</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Maiores debitis, perferendis iusto consequuntur quibusdam 
-                        asperiores sequi nobis aut inventore eveniet tempore 
-                        consequatur voluptatibus qui quaerat molestiae odit 
-                        temporibus? Obcaecati, veniam.</p>
-                    <div class="icons">
-                        <img src="img/heart.svg" alt="Like">
-                        <img src="img/bookmark.svg" alt="Save">
-                        <img src="img/source-fork.svg" alt="Fork">
+                    <div class="purple card">
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Perferendis, quas suscipit.
+                        </p>
+                        <div class="icons">
+                            <img src="img/heart-outline.svg" alt="Like">
+                            <img src="img/bookmark-outline.svg" alt="Save">
+                            <img src="img/source-fork.svg" alt="Fork">
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="announcements">
                 <h2>Announcements</h2>
-                <div class="card">
+                <div class="white card">
                     <div class="message">
                         <h3>Site Maintenance</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
