Style project cards

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                 <h2>Your Projects</h2>
                 <div class="project-cards">
                     <div class="purple card">
-                        <h3>Super Cool Project</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Perferendis, quas suscipit.
-                        </p>
+                        <div class="text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Perferendis, quas suscipit.
+                            </p>
+                        </div>
                         <div class="icons">
                             <img src="img/heart-outline.svg" alt="Like">
                             <img src="img/bookmark-outline.svg" alt="Save">
@@ -97,10 +99,12 @@
                         </div>
                     </div>
                     <div class="purple card">
-                        <h3>Less Cool Project</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Perferendis, quas suscipit.
-                        </p>
+                        <div class="text">
+                            <h3>Less Cool Project</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Perferendis, quas suscipit.
+                            </p>
+                        </div>
                         <div class="icons">
                             <img src="img/heart-outline.svg" alt="Like">
                             <img src="img/bookmark-outline.svg" alt="Save">
@@ -108,10 +112,12 @@
                         </div>
                     </div>
                     <div class="purple card">
-                        <h3>Impossible App</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Perferendis, quas suscipit.
-                        </p>
+                        <div class="text">
+                            <h3>Impossible App</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Perferendis, quas suscipit.
+                            </p>
+                        </div>
                         <div class="icons">
                             <img src="img/heart-outline.svg" alt="Like">
                             <img src="img/bookmark-outline.svg" alt="Save">
@@ -119,10 +125,12 @@
                         </div>
                     </div>
                     <div class="purple card">
-                        <h3>Easy Peasy App</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Perferendis, quas suscipit.
-                        </p>
+                        <div class="text">
+                            <h3>Easy Peasy App</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Perferendis, quas suscipit.
+                            </p>
+                        </div>
                         <div class="icons">
                             <img src="img/heart-outline.svg" alt="Like">
                             <img src="img/bookmark-outline.svg" alt="Save">
@@ -130,10 +138,12 @@
                         </div>
                     </div>
                     <div class="purple card">
-                        <h3>Ad Blocker</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Perferendis, quas suscipit.
-                        </p>
+                        <div class="text">
+                            <h3>Ad Blocker</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Perferendis, quas suscipit.
+                            </p>
+                        </div>
                         <div class="icons">
                             <img src="img/heart-outline.svg" alt="Like">
                             <img src="img/bookmark-outline.svg" alt="Save">
@@ -141,10 +151,12 @@
                         </div>
                     </div>
                     <div class="purple card">
-                        <h3>Money Maker</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Perferendis, quas suscipit.
-                        </p>
+                        <div class="text">
+                            <h3>Money Maker</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Perferendis, quas suscipit.
+                            </p>
+                        </div class="text">
                         <div class="icons">
                             <img src="img/heart-outline.svg" alt="Like">
                             <img src="img/bookmark-outline.svg" alt="Save">
