Style announcement card

--- a/index.html
+++ b/index.html
@@ -173,11 +173,13 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Nemo, ab voluptatem.</p>
                     </div>
+                    <hr>
                     <div class="message">
                         <h3>Community Share Day</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Nemo, ab voluptatem.</p>
                     </div>
+                    <hr>
                     <div class="message">
                         <h3>Updated Privacy Policy</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -187,7 +189,7 @@
             </div>
             <div class="trending">
                 <h2>Trending</h2>
-                <div class="card">
+                <div class="white card">
                     <div class="user">
                         <img src="img/profile.png" alt="Profile Pic" class="profile">
                         <h4 class="username">@connay.west</h4>
