--- a/index.html
+++ b/index.html
@@ -165,50 +165,52 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements">
-                <h2>Announcements</h2>
-                <div class="white card">
-                    <div class="message">
-                        <h3>Site Maintenance</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Nemo, ab voluptatem.</p>
-                    </div>
-                    <hr>
-                    <div class="message">
-                        <h3>Community Share Day</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Nemo, ab voluptatem.</p>
-                    </div>
-                    <hr>
-                    <div class="message">
-                        <h3>Updated Privacy Policy</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Nemo, ab voluptatem.</p>
+            <div class="column2">
+                <div class="announcements">
+                    <h2>Announcements</h2>
+                    <div class="white card">
+                        <div class="message">
+                            <h3>Site Maintenance</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Nemo, ab voluptatem.</p>
+                        </div>
+                        <hr>
+                        <div class="message">
+                            <h3>Community Share Day</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Nemo, ab voluptatem.</p>
+                        </div>
+                        <hr>
+                        <div class="message">
+                            <h3>Updated Privacy Policy</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Nemo, ab voluptatem.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="trending">
-                <h2>Trending</h2>
-                <div class="white card">
-                    <div class="user">
-                        <img src="img/profile.png" alt="Profile Pic" class="profile">
-                        <h4 class="username">@connay.west</h4>
-                        <p class="title">World Peace Builder</p>
-                    </div>
-                    <div class="user">
-                        <img src="img/profile.png" alt="Profile Pic" class="profile">
-                        <h4 class="username">@connay.west</h4>
-                        <p class="title">World Peace Builder</p>
-                    </div>
-                    <div class="user">
-                        <img src="img/profile.png" alt="Profile Pic" class="profile">
-                        <h4 class="username">@connay.west</h4>
-                        <p class="title">World Peace Builder</p>
-                    </div>
-                    <div class="user">
-                        <img src="img/profile.png" alt="Profile Pic" class="profile">
-                        <h4 class="username">@connay.west</h4>
-                        <p class="title">World Peace Builder</p>
+                <div class="trending">
+                    <h2>Trending</h2>
+                    <div class="white card">
+                        <div class="user">
+                            <img src="img/profile.png" alt="Profile Pic" class="profile">
+                            <h4 class="username">@connay.west</h4>
+                            <p class="title">World Peace Builder</p>
+                        </div>
+                        <div class="user">
+                            <img src="img/profile.png" alt="Profile Pic" class="profile">
+                            <h4 class="username">@connay.west</h4>
+                            <p class="title">World Peace Builder</p>
+                        </div>
+                        <div class="user">
+                            <img src="img/profile.png" alt="Profile Pic" class="profile">
+                            <h4 class="username">@connay.west</h4>
+                            <p class="title">World Peace Builder</p>
+                        </div>
+                        <div class="user">
+                            <img src="img/profile.png" alt="Profile Pic" class="profile">
+                            <h4 class="username">@connay.west</h4>
+                            <p class="title">World Peace Builder</p>
+                        </div>
                     </div>
                 </div>
             </div>
