Layout trending card

--- a/index.html
+++ b/index.html
@@ -193,23 +193,31 @@
                     <div class="white card">
                         <div class="user">
                             <img src="img/profile.png" alt="Profile Pic" class="profile">
-                            <h4 class="username">@connay.west</h4>
-                            <p class="title">World Peace Builder</p>
+                            <div class="text">
+                                <h4 class="username">@connay.west</h4>
+                                <p class="title">World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="user">
                             <img src="img/profile.png" alt="Profile Pic" class="profile">
-                            <h4 class="username">@connay.west</h4>
-                            <p class="title">World Peace Builder</p>
+                            <div class="text">
+                                <h4 class="username">@connay.west</h4>
+                                <p class="title">World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="user">
                             <img src="img/profile.png" alt="Profile Pic" class="profile">
-                            <h4 class="username">@connay.west</h4>
-                            <p class="title">World Peace Builder</p>
+                            <div class="text">
+                                <h4 class="username">@connay.west</h4>
+                                <p class="title">World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="user">
                             <img src="img/profile.png" alt="Profile Pic" class="profile">
-                            <h4 class="username">@connay.west</h4>
-                            <p class="title">World Peace Builder</p>
+                            <div class="text">
+                                <h4 class="username">@connay.west</h4>
+                                <p class="title">World Peace Builder</p>
+                            </div>
                         </div>
                     </div>
                 </div>
